--- a/input.css
+++ b/input.css
@@ -5,6 +5,7 @@
 #hero {
     background-image: url('../images/desktop/image-hero.jpg');
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 @media (max-width: 576px) {
