--- a/input.css
+++ b/input.css
@@ -14,3 +14,9 @@
         background-position: center;
     }
 }
+
+@layer components {
+    .btn {
+        @apply my-0  border-2 border-black px-10 py-2 font-alata font-bold uppercase tracking-widest hover:bg-black hover:text-white;
+    }
+}
